# zapi-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.ja.md  README.md  categories.ini.example  pyproject.toml  release-please-config.json  server.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-review.yml  dependabot-automerge.yml  release-please.yml  release.yml
tests/: conftest.py  test_categories.py  test_client.py  test_main.py  test_server.py  test_stdio_smoke.py
zapi_mcp/: __init__.py  __main__.py  categories.py  client.py  server.py
