[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "zapi-mcp"
dynamic = ["version"]
description = "MCP server for Zabbix API — daily brief, problems, hosts, items"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "AIKAWA Shigechika"},
]
keywords = ["zabbix", "mcp", "model-context-protocol", "monitoring", "network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "zapi-lib>=0.1,<1",
    "mcp>=1.0",
]

[project.scripts]
zapi-mcp = "zapi_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/shigechika/zapi-mcp"
Repository = "https://github.com/shigechika/zapi-mcp"
Issues = "https://github.com/shigechika/zapi-mcp/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "respx",
    "ruff",
    "freezegun",
]

[tool.setuptools]
packages = ["zapi_mcp"]

[tool.setuptools.dynamic]
version = {attr = "zapi_mcp.__version__"}

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
